# cmake-qt4-template

./: CMakeLists.txt  MyQtProject.pro  README.md
src/: main.cpp  mainui.cpp  mainui.h
